# auto-modeling-tool

./: .gitignore  404.html  CHANGELOG.md  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
configs/: default.yaml  experiment.yaml
docs/: index.md
docs/getting-started/: api-conventions.md  installation.md  quickstart.md
docs/guide/: binning-risk-evaluation.md  data-profiling.md  feature-selection.md  monitoring.md  reports.md
docs/project/: release-notes.md  stability.md
docs/reference/: analysis.md  monitoring.md  report-objects.md
examples/: README.md  credit_risk_example.py
getting-started/api-conventions/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
guide/binning-risk-evaluation/: index.html
guide/data-profiling/: index.html
guide/feature-selection/: index.html
guide/monitoring/: index.html
guide/reports/: index.html
project/release-notes/: index.html
project/stability/: index.html
reference/analysis/: index.html
reference/monitoring/: index.html
reference/report-objects/: index.html
scripts/: export_model.py  run_pipeline.sh
search/: search_index.json
src/: __init__.py  main.py
src/analysis/: __init__.py  _frame.py  profiling.py  risk.py
src/binning/: __init__.py  utils.py  woe_binning.py
src/core/: __init__.py  base.py  decorators.py  exceptions.py  logger.py
src/data/: __init__.py  loaders.py  preprocess.py  split.py
src/evaluation/: __init__.py  cross_validation.py  metrics.py  report.py  stability.py
src/features/: __init__.py  generation.py  importance.py  selection.py
src/modeling/: __init__.py  calibration.py  scorecard.py  train.py  tuning.py
src/monitoring/: __init__.py  alerting.py  monitor.py
src/pipelines/: auto_pipeline.py  steps.py
src/reports/: __init__.py  objects.py
src/types/: index.py
src/utils/: __init__.py  helpers.py  io.py  logging.py
tests/: conftest.py  test_analysis.py  test_binning.py  test_data.py  test_evaluation.py  test_features.py  test_modeling.py  test_monitoring.py
(+3 files in other folders)
